@@ -12,6 +12,8 @@
 	    "remoteRename:",
 	    "localNewFolder:",
 	    "remoteNewFolder:",
+	    "localRefresh:",
+	    "remoteRefresh:",
 	    "disconnect:",
 	    "showPrefPanel:",
 	    "prefSave:",
@@ -60,12 +62,14 @@
 	    "listDoubleClick:",
 	    "localDelete:",
 	    "localNewFolder:",
+	    "localRefresh:",
 	    "localRename:",
 	    "orderFrontFontPanel:",
 	    "prefCancel:",
 	    "prefSave:",
 	    "remoteDelete:",
 	    "remoteNewFolder:",
+	    "remoteRefresh:",
 	    "remoteRename:",
 	    "setServer:",
 	    "showConnPanel:",
